# Tarea1_SistemasOperativos

./: CMakeLists.txt  main.c
ConfigManagement/: configproc.c  configproc.h
DockerFiles/: Comandos Importantes  Dockerfile  config.config
FileManagement/: dirmag.c  dirmag.h
ImageProcessing/: imagproc.c  imagproc.h
SocketManagement/: clientinformation.c  clientinformation.h  clientsocket.c  clientsocket.h  hostsocket.c  hostsocket.h  messagemag.c  messagemag.h
